--- a/analyze_mc.ipynb
+++ b/analyze_mc.ipynb
@@ -20,12 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out = Path(\"out\")\n",
-    "\n",
-    "ckpt_red = pickle.load(open(out / \"mc_red.p\", \"rb\"))\n",
-    "df_red = pd.DataFrame(ckpt_red[\"fit\"].T, columns=[str(l) for l in ckpt_red[\"train_lens\"]])\n",
-    "df_red = df_red.melt(var_name=\"length\", value_name=\"fit\")\n",
-    "df_red.insert(0, \"model\", \"reduced\")"
+    "out = Path(\"out\")"
    ]
   },
   {
@@ -34,21 +29,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out = Path(\"out\")\n",
-    "\n",
+    "ckpt_red_20 = pickle.load(open(out / \"mc_red.p\", \"rb\"))\n",
+    "df_red_20 = pd.DataFrame(ckpt_red_20[\"fit\"].T, columns=[str(l) for l in ckpt_red_20[\"train_lens\"]])\n",
+    "df_red_20 = df_red_20.melt(var_name=\"length\", value_name=\"fit\")\n",
+    "df_red_20.insert(0, \"model\", \"reduced 20\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ckpt_red_10 = pickle.load(open(out / \"mc_red_10.p\", \"rb\"))\n",
+    "df_red_10 = pd.DataFrame(ckpt_red_10[\"fit\"].T, columns=[str(l) for l in ckpt_red_10[\"train_lens\"]])\n",
+    "df_red_10 = df_red_10.melt(var_name=\"length\", value_name=\"fit\")\n",
+    "df_red_10.insert(0, \"model\", \"reduced 10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ckpt_full = pickle.load(open(out / \"mc_full.p\", \"rb\"))\n",
-    "#fit_best = np.copy(ckpt_full[\"fit_bfgs\"])\n",
-    "#mask = (ckpt_full[\"fit_adam_tr\"] > ckpt_full[\"fit_bfgs_tr\"]) | (np.isnan(ckpt_full[\"fit_bfgs_tr\"]))\n",
-    "#fit_best[mask] = ckpt_full[\"fit_adam\"][mask]\n",
     "\n",
     "df_full = pd.DataFrame(ckpt_full[\"fit_bfgs\"].T, columns=[str(l) for l in ckpt_full[\"train_lens\"]])\n",
     "df_full = df_full.melt(var_name=\"length\", value_name=\"fit\")\n",
-    "df_full.insert(0, \"model\", \"full\")\n",
-    "#df_full.dropna(inplace=True)\n",
-    "#df_full.drop(df_full[df_full.fit < 0].index, inplace=True)\n",
-    "\n",
-    "\n",
-    "df_mc = pd.concat((df_full, df_red), ignore_index=True)"
+    "df_full.insert(0, \"model\", \"full\")"
    ]
   },
   {
@@ -57,17 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fit_best[mask], \n",
-    "#ckpt_full[\"fit_bfgs\"][mask]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ckpt_full[\"fit_adam\"][mask]"
+    "df_mc = pd.concat((df_red_20, df_red_10, df_full), ignore_index=True)"
    ]
   },
   {
@@ -89,7 +88,6 @@
    "outputs": [],
    "source": [
     "df_mc[\"fit\"] = np.maximum(df_mc[\"fit\"], 0.0)\n",
-    "\n",
     "df_mc[\"rmse\"] = (1 - df_mc[\"fit\"]/100.0) * rms_y"
    ]
   },
@@ -99,8 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tmp = df_mc[df_mc[\"fit\"] < 1].groupby([\"model\", \"length\"]).fit.count()\n",
-    "#tmp[\"full (bfgs)\"]"
+    "df_mc = df_mc[df_mc[\"length\"].isin([\"100\", \"200\", \"400\", \"600\", \"800\", \"1000\", \"2000\", \"3000\", \"4000\", \"5000\"])]"
    ]
   },
   {
@@ -110,26 +107,27 @@
    "outputs": [],
    "source": [
     "model_labels = {\n",
-    "#    \"full\": \"full parameterization\",\n",
-    "#    \"reduced\": \"reduced parameterization\",\n",
+    "    \"full\": \"full-order\",\n",
+    "    \"reduced 10\": \"reduced, $n_\\phi$ = 10\",\n",
+    "    \"reduced 20\": \"reduced, $n_\\phi$ = 20\",\n",
     "    # Add more mappings as needed\n",
     "}\n",
     "model_order = [\"full\", \"reduced\"]\n",
     "\n",
     "plt.figure(figsize=(8, 4))\n",
-    "ax = sns.boxplot(df_mc, x=\"length\", y=\"fit\", hue=\"model\")#, hue_order=[\"full\", \"reduced\"])\n",
+    "ax = sns.boxplot(df_mc, x=\"length\", y=\"fit\", hue=df_mc[\"model\"].map(model_labels), hue_order=[\"full-order\", \"reduced, $n_\\phi$ = 20\", \"reduced, $n_\\phi$ = 10\"])\n",
+    "#ax = sns.boxplot(df_mc, x=\"length\", y=\"fit\", hue=df_mc[\"model\"], hue_order=[\"full\", \"reduced 20\", \"reduced 10\"])\n",
     "plt.tight_layout()  # This adjusts the plot to ensure the legend fits\n",
     "plt.xticks(rotation=45)\n",
     "ax.set_xlabel(\"Training sequence length (-)\")\n",
     "ax.set_ylabel(\"Test FIT (%)\")\n",
     "ax.axhline(y=fit_lin, color=\"black\", linestyle=\"dotted\", alpha=0.5, label=\"LTI 40960 samples\")#, linewidth=0.5)\n",
-    "ax.axhline(y=98.8, color=\"black\", linestyle=\"dashed\", alpha=0.5, label=\"Full-order 40960 samples\")#, linewidth=0.5)\n",
+    "ax.axhline(y=98.9, color=\"black\", linestyle=\"dashed\", alpha=0.5, label=\"Full-order 40960 samples\")#, linewidth=0.5)\n",
     "#plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left', borderaxespad=0)\n",
     "plt.legend(loc='lower right')#, borderaxespad=0)\n",
     "plt.ylim([-5, 100])\n",
     "plt.tight_layout()\n",
-    "plt.savefig(Path(\"fig\")/\"boxplot.pdf\")\n",
-    "#plt.savefig(Path(\"fig\")/\"boxplot.png\")"
+    "plt.savefig(Path(\"fig\")/\"boxplot.pdf\")"
    ]
   },
   {
@@ -138,7 +136,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ckpt_full.keys()"
+    "df_stats = df_mc.groupby([\"model\", \"length\"]).agg([\"mean\", \"median\", \"std\"])\n",
+    "df_stats"
    ]
   },
   {
@@ -148,14 +147,11 @@
    "outputs": [],
    "source": [
     "plt.figure()\n",
-    "plt.title(\"Training time (hours)\")\n",
-    "plt.plot(ckpt_full['train_lens'], ckpt_full['train_time']/60/24, \"*\", label=\"full (adam + BFGS)\")\n",
-    "plt.plot(ckpt_red['train_lens'], ckpt_red['train_time']/60/24, \"*\", label=\"reduced\")\n",
+    "#plt.plot(df_stats.loc[\"full\"][\"fit\"][\"mean\"])\n",
+    "#plt.fill_between(df_stats.loc[\"full\"][\"fit\"][\"mean\"].index, df_stats.loc[\"full\"][\"fit\"][\"mean\"] - df_stats.loc[\"full\"][\"fit\"][\"std\"], df_stats.loc[\"full\"][\"fit\"][\"mean\"] + df_stats.loc[\"full\"][\"fit\"][\"std\"], alpha=0.3)\n",
+    "#plt.fill_between(df_stats.loc[\"reduced\"][\"fit\"][\"mean\"].index, df_stats.loc[\"reduced\"][\"fit\"][\"mean\"] - df_stats.loc[\"reduced\"][\"fit\"][\"std\"], df_stats.loc[\"reduced\"][\"fit\"][\"mean\"] + df_stats.loc[\"reduced\"][\"fit\"][\"std\"], alpha=0.3)\n",
     "\n",
-    "#plt.plot(df_full_time.length, df_full_time.time_adam/60/24, \"*\", label=\"full (adam)\")\n",
-    "plt.xlabel(\"Training sequence length (-)\")\n",
-    "plt.ylabel(\"Time (hours)\")\n",
-    "plt.legend();"
+    "#plt.plot(df_stats.loc[\"reduced\"][\"fit\"][\"mean\"])"
    ]
   }
  ],
