--- a/test_full_alldata.ipynb
+++ b/test_full_alldata.ipynb
@@ -11,6 +11,7 @@
     "import scipy\n",
     "from pathlib import Path\n",
     "import jax.numpy as jnp\n",
+    "import jax.random as jr\n",
     "import numpy as onp\n",
     "import matplotlib.pyplot as plt\n",
     "import jax\n",
@@ -116,7 +117,8 @@
     "from flax.training import train_state\n",
     "from tqdm import tqdm\n",
     "\n",
-    "x0_opt = jnp.zeros((cfg.nx, ))\n",
+    "#x0_opt = jnp.ones((cfg.nx, ))\n",
+    "x0_opt = ckpt[\"x0\"]\n",
     "\n",
     "def loss_state(x0):\n",
     "    y_hat = ss_apply(ckpt[\"params\"], scalers, x0, u_test[:nin, :])\n",
@@ -152,7 +154,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#x0 = jnp.zeros((cfg.nx, ))\n",
     "x0 = x0_opt\n",
     "y_hat = ss_apply(ckpt[\"params\"], scalers, x0, u_test)\n",
     "#y2_hat = ss_apply(opt_vars_adam[\"params\"], scalers, x0, u2)\n",
@@ -161,9 +162,9 @@
     "plt.plot(t_test, y_hat, \"b\", label=\"reconstructed\")\n",
     "plt.plot(t_test, y_test - y_hat, \"r\", label=\"reconstruction error\")\n",
     "plt.xlabel(\"time (s)\")\n",
-    "#plt.axvline(cfg.skip_loss, color=\"k\")\n",
+    "#plt.axvline(t_test[cfg.skip_loss], color=\"k\") # to instead skip first samples from the loss\n",
     "plt.ylim([-4, 4])\n",
-    "plt.xlim([5, 6])\n",
+    "#plt.xlim([5, 6])\n",
     "plt.legend(loc=\"upper right\")\n",
     "plt.savefig(Path(\"fig\") / \"full_order_prediction.pdf\")"
    ]
@@ -174,8 +175,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_full = nonlinear_benchmarks.error_metrics.fit_index(y_test, y_hat)\n",
-    "rmse_full = nonlinear_benchmarks.error_metrics.RMSE(y_test, y_hat)*7e-4 * 1e6\n",
+    "fit_full = nonlinear_benchmarks.error_metrics.fit_index(y_test[cfg.skip_loss:], y_hat[cfg.skip_loss:])\n",
+    "rmse_full = nonlinear_benchmarks.error_metrics.RMSE(y_test[cfg.skip_loss:], y_hat[cfg.skip_loss:])*7e-4 * 1e6\n",
+    "\n",
+    "#fit_full = nonlinear_benchmarks.error_metrics.fit_index(y_test, y_hat)\n",
+    "#rmse_full = nonlinear_benchmarks.error_metrics.RMSE(y_test, y_hat)*7e-4 * 1e6\n",
     "fit_full, rmse_full # (Array([98.54584449], dtype=float64), array([0.96720211]))\n",
     "print(f\"Fit index: {fit_full[0]:.2f} %\")\n",
     "print(f\"RMSE: {rmse_full[0]:.2f}e-6\")"
@@ -207,6 +211,22 @@
     "plt.ylabel(\"Eigenvalue\")\n",
     "plt.tight_layout()\n",
     "plt.savefig(Path(\"fig\") / \"hessian_eigenvalues.pdf\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fig, ax = plt.subplots(1, 1, figsize=set_size(linewidth, fraction=1.0))\n",
+    "# #plt.title(\"Hessian eigenvalues\")\n",
+    "# plt.semilogy(w, \"k*\")\n",
+    "# plt.xlabel(\"Eigenvalue index\")\n",
+    "# plt.ylabel(\"Eigenvalue\")\n",
+    "# plt.tight_layout()\n",
+    "# plt.savefig(Path(\"fig\") / \"hessian_eigenvalues.pdf\")\n",
+    "# #plt.ylim([1e-5, 1e3]);\n"
    ]
   }
  ],
