--- a/train_full_alldata.ipynb
+++ b/train_full_alldata.ipynb
@@ -256,7 +256,7 @@
    "source": [
     "fit_full = nonlinear_benchmarks.error_metrics.fit_index(y_test[cfg.skip_loss:], y2_hat[cfg.skip_loss:])\n",
     "rmse_full = nonlinear_benchmarks.error_metrics.RMSE(y_test[cfg.skip_loss:], y2_hat[cfg.skip_loss:])*7e-4 * 1e5\n",
-    "fit_full, rmse_full # (Array([98.54584449], dtype=float64), array([0.96720211]))\n",
+    "fit_full, rmse_full \n",
     "print(f\"Fit index: {fit_full[0]:.2f} %\")\n",
     "print(f\"RMSE: {rmse_full[0]:.2f}e-5\")"
    ]
@@ -308,6 +308,17 @@
     "}\n",
     "\n",
     "pickle.dump(ckpt, open(filename, \"wb\" ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training time: 5068.36 s\n",
+    "# Fit index: 98.91 %\n",
+    "# RMSE: 0.73e-5"
    ]
   }
  ],
