--- a/analyze_mc.ipynb
+++ b/analyze_mc.ipynb
@@ -20,7 +20,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out = Path(\"out\")"
+    "tex_fonts = {\n",
+    "    \n",
+    "    # Use LaTeX to write all text\n",
+    "    \"text.usetex\": True,\n",
+    "    \"font.family\": \"serif\",\n",
+    "    # Use 10pt font in plots, to match 10pt font in document\n",
+    "   \"axes.labelsize\": 12,\n",
+    "   \"font.size\": 12,\n",
+    "\n",
+    "   \"legend.fontsize\": 10,\n",
+    "   \"xtick.labelsize\": 10,\n",
+    "   \"ytick.labelsize\": 10\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.rcParams.update(tex_fonts) # use latex fonts\n",
+    "#plt.rcParams.update({\"axes.grid\": True}) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = Path(\"out\")\n",
+    "\n",
+    "fig_dir = Path(\"fig\")\n",
+    "fig_dir.mkdir(exist_ok=True)"
    ]
   },
   {
@@ -97,7 +131,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_mc = df_mc[df_mc[\"length\"].isin([\"100\", \"200\", \"400\", \"600\", \"800\", \"1000\", \"2000\", \"3000\", \"4000\", \"5000\"])]"
+    "df_mc = df_mc[df_mc[\"length\"].isin([\"100\", \"200\", \"400\", \"500\", \"600\", \"800\", \"1000\", \"2000\", \"3000\", \"4000\", \"5000\"])]\n",
+    "df_mc[\"length\"] = df_mc[\"length\"].astype(int)\n",
+    "df_mc.sort_values(by=[\"model\", \"length\"], inplace=True)"
    ]
   },
   {
@@ -107,27 +143,47 @@
    "outputs": [],
    "source": [
     "model_labels = {\n",
-    "    \"full\": \"full-order\",\n",
-    "    \"reduced 10\": \"reduced, $n_\\phi$ = 10\",\n",
-    "    \"reduced 20\": \"reduced, $n_\\phi$ = 20\",\n",
-    "    # Add more mappings as needed\n",
+    "    \"full\": r\"Full-order\",\n",
+    "    \"reduced 20\": r\"Reduced-order, $n_\\phi$ = 20\",\n",
+    "    \"reduced 10\": r\"Reduced-order, $n_\\phi$ = 10\",\n",
     "}\n",
     "model_order = [\"full\", \"reduced\"]\n",
     "\n",
-    "plt.figure(figsize=(8, 4))\n",
-    "ax = sns.boxplot(df_mc, x=\"length\", y=\"fit\", hue=df_mc[\"model\"].map(model_labels), hue_order=[\"full-order\", \"reduced, $n_\\phi$ = 20\", \"reduced, $n_\\phi$ = 10\"])\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(8, 4))\n",
+    "ax.axhline(y=98.9, color=\"black\", linestyle=\"dashed\", alpha=0.5, label=\"Full-order 40960 samples\")#, linewidth=0.5)\n",
+    "ax.axhline(y=fit_lin, color=\"black\", linestyle=\"dotted\", alpha=0.5, label=\"LTI 40960 samples\")#, linewidth=0.5)\n",
+    "ax = sns.boxplot(df_mc, x=\"length\", y=\"fit\", hue=df_mc[\"model\"].map(model_labels), hue_order=model_labels.values(), ax=ax)\n",
     "#ax = sns.boxplot(df_mc, x=\"length\", y=\"fit\", hue=df_mc[\"model\"], hue_order=[\"full\", \"reduced 20\", \"reduced 10\"])\n",
     "plt.tight_layout()  # This adjusts the plot to ensure the legend fits\n",
     "plt.xticks(rotation=45)\n",
-    "ax.set_xlabel(\"Training sequence length (-)\")\n",
-    "ax.set_ylabel(\"Test FIT (%)\")\n",
-    "ax.axhline(y=fit_lin, color=\"black\", linestyle=\"dotted\", alpha=0.5, label=\"LTI 40960 samples\")#, linewidth=0.5)\n",
-    "ax.axhline(y=98.9, color=\"black\", linestyle=\"dashed\", alpha=0.5, label=\"Full-order 40960 samples\")#, linewidth=0.5)\n",
+    "ax.set_xlabel(r\"Training sequence length (-)\")\n",
+    "ax.set_ylabel(r\"Test FIT (\\%)\")\n",
     "#plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left', borderaxespad=0)\n",
-    "plt.legend(loc='lower right')#, borderaxespad=0)\n",
+    "plt.legend(loc='lower right', bbox_to_anchor=(1, 0.1))#, borderaxespad=0)\n",
     "plt.ylim([-5, 100])\n",
     "plt.tight_layout()\n",
-    "plt.savefig(Path(\"fig\")/\"boxplot.pdf\")"
+    "\n",
+    "plt.savefig(fig_dir/\"boxplot.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# median performance\n",
+    "df_mc.groupby([\"model\", \"length\"]).median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# failing runs\n",
+    "df_mc[df_mc[\"fit\"] < 1.0].groupby([\"model\", \"length\"]).count()"
    ]
   },
   {
@@ -157,7 +213,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "jax",
    "language": "python",
    "name": "python3"
   },
@@ -171,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
