--- a/test_full_alldata.ipynb
+++ b/test_full_alldata.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib widget"
+    "#%matplotlib widget"
    ]
   },
   {
@@ -158,14 +158,15 @@
     "y_hat = ss_apply(ckpt[\"params\"], scalers, x0, u_test)\n",
     "#y2_hat = ss_apply(opt_vars_adam[\"params\"], scalers, x0, u2)\n",
     "plt.figure()\n",
-    "plt.plot(t_test, y_test, \"k\", label=\"true\")\n",
-    "plt.plot(t_test, y_hat, \"b\", label=\"reconstructed\")\n",
-    "plt.plot(t_test, y_test - y_hat, \"r\", label=\"reconstruction error\")\n",
+    "plt.plot(t_test, y_test, \"k\", label=r\"y\")\n",
+    "plt.plot(t_test, y_hat, \"b\", label=r\"$\\hat{y}$\")\n",
+    "plt.plot(t_test, y_test - y_hat, \"r\", label=r\"$y - \\hat{y}$\")\n",
     "plt.xlabel(\"time (s)\")\n",
     "#plt.axvline(t_test[cfg.skip_loss], color=\"k\") # to instead skip first samples from the loss\n",
-    "plt.ylim([-4, 4])\n",
+    "#plt.ylim([-4, 4])\n",
     "#plt.xlim([5, 6])\n",
     "plt.legend(loc=\"upper right\")\n",
+    "Path(\"fig\").mkdir(exist_ok=True)\n",
     "plt.savefig(Path(\"fig\") / \"full_order_prediction.pdf\")"
    ]
   },
@@ -232,7 +233,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "jax",
    "language": "python",
    "name": "python3"
   },
@@ -246,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
