--- a/meta_train_maml.ipynb
+++ b/meta_train_maml.ipynb
@@ -46,6 +46,7 @@
     "    # Misc\n",
     "    \"log_wandb\": True,\n",
     "\n",
+    "\n",
     "    # Meta dataset\n",
     "    \"K\": 2,  # repetitions from the same system, unused\n",
     "    \"nu\": 1,\n",
@@ -64,10 +65,10 @@
     "    \"hidden_g\": 16,\n",
     "    \n",
     "    # Inner Loop Optimization\n",
-    "    \"alpha\": 0.1,\n",
+    "    \"inner_lr\": 0.1, # inner loop learning rate\n",
     "    \"inner_iters\": 10,\n",
     "    \n",
-    "    # Optimization\n",
+    "    # Outer Loop Optimization\n",
     "    \"batch_size\": 128,  # systems sampled at each meta optimization step\n",
     "    \"iters\": 200_000,\n",
     "    \"lr\": 2e-4,\n",
@@ -177,8 +178,8 @@
    "outputs": [],
    "source": [
     "# Initialize state-space model\n",
-    "params_ss = ss_init(dec_key, nu=cfg.nu, ny=cfg.ny, nx=cfg.nx)\n",
-    "params_ss_flat, unflatten_dec = jax.flatten_util.ravel_pytree(params_ss)\n",
+    "params_maml = ss_init(dec_key, nu=cfg.nu, ny=cfg.ny, nx=cfg.nx)\n",
+    "params_ss_flat, unflatten_dec = jax.flatten_util.ravel_pytree(params_maml)\n",
     "n_params = params_ss_flat.shape[0]\n",
     "scalers = {\"f\": {\"lin\": 1e-2, \"nl\": 1e-2}, \"g\": {\"lin\": 1e0, \"nl\": 1e0}}"
    ]
@@ -205,22 +206,24 @@
    "outputs": [],
    "source": [
     "# Inner update function (GD) on a single instance\n",
-    "def inner_update_fn(p, y, u, alpha=0.1, iters=1):\n",
+    "def inner_update_fn(p, y, u, alpha=0.1, iters=10):\n",
     "    grad_fn = jax.grad(mse_loss_fn)\n",
+    "    inner_sgd_fn = lambda gr, pa: (pa - alpha*gr)\n",
+    "\n",
     "    for _ in range(iters):\n",
     "        grads = grad_fn(p, y, u)\n",
-    "        inner_sgd_fn = lambda g, p: (p - alpha*g)\n",
     "        p = jax.tree_util.tree_map(inner_sgd_fn, grads, p)\n",
     "    return p\n",
     "\n",
     "# Meta loss (MAML) for one instance\n",
     "def instance_loss_fn(p1, y1, u1, y2, u2):\n",
     "\n",
-    "    p2 = inner_update_fn(p1, y1, u1, alpha=cfg.alpha, iters=cfg.inner_iters)\n",
+    "    #p2 = inner_update_fn(p1, y1, u1, alpha=0.01, iters=1)\n",
+    "    p2 = inner_update_fn(p1, y1, u1, alpha=cfg.inner_lr, iters=cfg.inner_iters)\n",
     "    return mse_loss_fn(p2, y2, u2)\n",
     "\n",
     "\n",
-    "instance_loss_fn(params_ss, batch_y1[0], batch_u1[0], batch_y2[0], batch_u2[0])"
+    "instance_loss_fn(params_maml, batch_y1[0], batch_u1[0], batch_y2[0], batch_u2[0])"
    ]
   },
   {
@@ -247,7 +250,7 @@
     "  optax.clip(cfg.clip),\n",
     "  optax.adam(learning_rate=cfg.lr),\n",
     ")\n",
-    "state = train_state.TrainState.create(apply_fn=loss_fn, params=params_ss, tx=opt)\n",
+    "state = train_state.TrainState.create(apply_fn=loss_fn, params=params_maml, tx=opt)\n",
     "\n",
     "@jax.jit\n",
     "def make_step(state, y1, u1, y2, u2):\n",
