final train_maml

--- a/train_maml_mc.ipynb
+++ b/train_maml_mc.ipynb
@@ -15,9 +15,7 @@
     "import jax\n",
     "import jax.random as jr\n",
     "import numpy as onp\n",
-    "import pandas as pd\n",
     "import optax\n",
-    "import jaxopt\n",
     "from flax.training import train_state\n",
     "import scipy\n",
     "from neuralss import ss_init, ss_apply\n",
@@ -48,8 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ckpt_path = Path(\"tmp\") / f\"maml_95000.p\"\n",
-    "#ckpt_path = Path(\"out\") / f\"maml_1step.p\"\n",
+    "ckpt_path = Path(\"out\") / f\"maml_10s.p\"\n",
     "ckpt = pickle.load(open(ckpt_path, \"rb\"))\n",
     "\n",
     "cfg = ckpt[\"cfg\"]\n",
@@ -99,7 +96,7 @@
     "    loss = jnp.mean(err ** 2)\n",
     "    return loss\n",
     "\n",
-    "def train(ov, y, u, iters=1000, lr=0.01):\n",
+    "def train(ov, y, u, iters=10, lr=0.1):\n",
     "\n",
     "        loss_cfg = partial(mse_loss_x0_fn, y=y, u=u)\n",
     "#        opt = optax.adamw(learning_rate=lr)\n",
